--- a/Photos.html
+++ b/Photos.html
@@ -16,7 +16,7 @@
     <h1>Image Gallery</h1>    
         
        
-<img id="special-pic" alt="barn owl" src="images/barn-owl-2.jpg" height="200px"> 
+        <a href="images/barn-owl-2.jpg" target="_blank"> <img id="special-pic" src="images/barn-owl-2.jpg" alt="barn owl"></a>
     <img id="special-pic" alt="smiling barn owl" src="images/barnowlsmile.jpg" height="200px">
     <img id="special-pic" alt="barn owl in flight" src="images/wings.jpg" height="200px">
     <img id="special-pic" alt="barn owl at sunset" src="images/BarnOwlSunset.jpg" height="200px"> 
