--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
             font-weight: 100;
             margin-left: 20px;
         }
+        img {
+            box-shadow: 4px 4px #dddddd;
+            height: 300px;
+        }
     
     </style>
     
